spacing fixes

--- a/source-alt.scss
+++ b/source-alt.scss
@@ -37,12 +37,12 @@ $shade: rgba(0, 0, 0, 0.2);
 
          /* Icon */
          background: var(--cbi-icon) no-repeat;
-         
-         background-position: 5px;
+
+         background-position: 7px;
          background-size: 15px;
 
          /* Name */
-         padding-left: 32px;
+         padding-left: 35px;
          color: var(--text-normal); font-size: 0.8em;
          text-transform: uppercase; font-weight: bold;
          font-family: "Raleway", sans-serif;
